@@ -1,1 +1,1 @@
-This is only a test.
+<foo>This is only a test.</foo>
